Correction iphone - finitions 11

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -33,7 +33,7 @@ header{
     display: none;
     flex-flow: column wrap;
     width: 100vw;
-    height: 90vh;
+    height: 85vh;
     position: fixed;
     background-color: rgba(128,128,128,0);
     justify-content: space-evenly;
